Creata struttura generale

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <body>
 
         <Header>
-            <div class="background-container">
-                <div class="container-header">
+            <div class="background-container-header">
+                <div class="container">
                     <section class="categoria">
                         <span><strong>Donna</strong></span>
                         <span><strong>Uomo</strong></span>
@@ -38,9 +38,73 @@
 
         <main>
 
+            <div class="container-main">
+                <div class="my-row">
+                    <section class="column-1-3">
+                        <div class="card">
+                            card
+                        </div>
+                    </section>
+
+                    <section class="column-1-3">
+                        <div class="card">
+                            card
+                        </div>
+                    </section>
+
+                    <section class="column-1-3">
+                        <div class="card">
+                            card
+                        </div>
+                    </section>
+
+                    <section class="column-1-3">
+                        <div class="card">
+                            card
+                        </div>
+                    </section>
+
+                    <section class="column-1-3">
+                        <div class="card">
+                            card
+                        </div>
+                    </section>
+
+                    <section class="column-1-3">
+                        <div class="card">
+                            card
+                        </div>
+                    </section>
+                </div>
+
+            </div>
+
         </main>
 
         <footer>
+
+            <div class="background-container-footer">
+                <div class="container">
+                    <section class="informazioni">
+                        <div>
+                            <span><strong>Boolando s.r.l</strong></span>  
+                        </div>
+                        <div class="privacy">
+                            
+                            <a href="#">informazioni legali</a>
+                            <a href="#">informazioni sulla privacy</a>
+                            <a href="#">Diritto di recesso</a>
+
+                        </div>
+                    </section>
+
+                    <section class="social">
+                        <i class="fa-regular fa-user"></i>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-bag-shopping"></i>
+                    </section>
+                </div>
+            </div>
 
         </footer>
     
