Esercizo con qualche miglioria

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
             <div class="background-container-header">
                 <div class="container">
                     <section class="categoria">
-                        <span><strong>Donna</strong></span>
+
+                        <nav>
+                            <a href="#"><strong>Donna</strong></a>
+                            <a href="#"><strong>Uomo</strong></a>
+                            <a href="#"><strong>Bambini</strong></a>
+                        </nav>
+                        <!-- <span><strong>Donna</strong></span>
                         <span><strong>Uomo</strong></span>
-                        <span><strong>Bambini</strong></span>
+                        <span><strong>Bambini</strong></span> -->
                     </section>
 
                     <section class="logo">
@@ -27,9 +33,15 @@
                     </section>
 
                     <section class="icone">
-                        <i class="fa-regular fa-user"></i>
+
+                        <nav>
+                            <a href="#"><i class="fa-regular fa-user"></i></a>
+                            <a href="#"><i class="fa-regular fa-heart"></i></a>
+                            <a href="#"> <i class="fa-solid fa-bag-shopping"></i></a>
+                        </nav>
+                        <!-- <i class="fa-regular fa-user"></i>
                         <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-bag-shopping"></i>
+                        <i class="fa-solid fa-bag-shopping"></i> -->
                     </section>
                 </div>
             </div>
@@ -251,11 +263,18 @@
 
                         <div class="icone-footer">
                             
-                            <i class="fa-brands fa-square-twitter"></i>
+                            <nav>
+                                <a href="#"><i class="fa-brands fa-square-twitter"></i></i></a>
+                                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                                <a href="#">  <i class="fa-brands fa-square-instagram"></i></a>
+                                <a href="#"> <i class="fa-brands fa-square-pinterest"></i></a>
+                                <a href="#"> <i class="fa-brands fa-square-youtube"></i></i></a>
+                            </nav>
+                            <!-- <i class="fa-brands fa-square-twitter"></i>
                             <i class="fa-brands fa-square-facebook"></i>
                             <i class="fa-brands fa-square-instagram"></i>
                             <i class="fa-brands fa-square-pinterest"></i>
-                            <i class="fa-brands fa-square-youtube"></i>
+                            <i class="fa-brands fa-square-youtube"></i> -->
 
                         </div>
                 </div>
